...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/srChooseDay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:entries="@array/days" />

        <CheckBox
...
                android:layout_weight="1"
                android:gravity="center"
                android:text="Opening:"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/openingTime"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_vertical|center_horizontal|center_vertical"
                android:hint="Tap to choose a Time"
                android:textColor="#000000"
...
                android:layout_weight="1"
                android:gravity="center"
                android:text="Closing:"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/closingTime"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_vertical|center_horizontal|center_vertical"
                android:hint="Tap to choose a Time"
                android:textColor="#000000"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Monday" />

            <TextView
                android:id="@+id/txtMondayOpen"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/txtMondayClose"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

...
