<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sample"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="sample"/>
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="sample"/>

        <Button
            android:id="@+id/bReviewBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Review Branch"
            android:onClick="rating"/>

        <Button
            android:id="@+id/bViewServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Services" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"/>

</androidx.cardview.widget.CardView>