...
    <string name="services">Services</string>
    <string name="accounts">Accounts</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="select_one_of_the_following">Select one of the following:</string>
    <string name="manage_office_hours">Manage Office Hours</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="search">Search:</string>
    <string-array name="rolesAdmin">
        <item>Administrator</item>
        <item>Employee</item>
        <item>Customer</item>
...
